restore change