@@ -60,6 +60,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.Executor;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import javax.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -118,7 +119,7 @@ public class GcpPubSubAutoConfiguration {
 
   private ExecutorProvider globalExecutorProvider;
 
-  private final ObjectProvider<SelectiveSchedulerThreadNameProvider> selectiveSchedulerThreadNameProvider;
+  private ObjectProvider<SelectiveSchedulerThreadNameProvider> selectiveSchedulerThreadNameProvider;
 
   public GcpPubSubAutoConfiguration(
       GcpPubSubProperties gcpPubSubProperties,
@@ -367,7 +368,8 @@ public class GcpPubSubAutoConfiguration {
     factory.setEnableMessageOrdering(gcpPubSubProperties.getPublisher().getEnableMessageOrdering());
     factory.setEndpoint(gcpPubSubProperties.getPublisher().getEndpoint());
 
-    List<PublisherCustomizer> customizers = customizersProvider.orderedStream().toList();
+    List<PublisherCustomizer> customizers = customizersProvider.orderedStream()
+        .collect(Collectors.toList());
     Collections.reverse(customizers); // highest priority customizer needs to be last
     factory.setCustomizers(customizers);
 
